# strandweaver

./: .gitattributes  .gitignore  CHROMOSOME_CLASSIFICATION_IMPLEMENTATION.md  CLI_QUICK_REFERENCE.md  CONSOLIDATION_SUMMARY.md  COORDINATOR_CONSOLIDATION_SUMMARY.md  ERRORSMITH_CONSOLIDATION_SUMMARY.md  Future_Enhancements.md  GENOMICS_AUDIT.md  HIC_IMPLEMENTATION_COMPLETE.md  HIC_SCAFFOLDING_ENHANCEMENT.md  INTEGRATION_COMPLETE_SUMMARY.md  LINKEDIN_POST.md  Makefile  ONGOING_REPAIRS.md  PIPELINE_MOCK_RUN_ANALYSIS.md  POLISHING_INTEGRATION_PROPOSAL.md  POLISHING_INTEGRATION_PROPOSAL_V2.md  README copy.md  README.md  RELEASE_CHECKLIST_v0.1.md  RELEASE_NOTES_v0.1.md  SVSCRIBE_IMPLEMENTATION_SUMMARY.md  TRAINING.md  TRAINING_DATA_SETUP.md  TRAINING_WORKFLOW_SUMMARY.md  V0.1_RELEASE_SUMMARY.md  _LOCAL_UNCOMMITTED_DIFF.patch  env_ml_training.yml  gcp_generate_all_training_data.py  generate_real_training_data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.py  test_gnn_integration.py  test_svscribe.py  test_training_workflow.py  (+1 more)
Non_Main_Commit_Files/: TRAINING.md
docs/: AI_ML_GUIDE.md  ASSEMBLY_MODULE_REFERENCE.md  ERRORSMITH_V2_DESIGN.md  FEATURES.md  GPU_ACCELERATION.md  LICENSE_ACADEMIC.md  LICENSE_COMMERCIAL.md  MASTER_DEVELOPMENT_ROADMAP.md  Notes_on_Pipeline_Flow_20Dec.md  PIPELINE_FLOW.md  README.md  SCIENTIFIC_REFERENCES.md  SVScribe_Improvement_Plan.md  ThreadCompass_Improvement_Plan.md
examples/: .gitignore  README.md  complete_training_pipeline.py  config_ancient_dna.yaml  config_gpu.yaml  config_hybrid.yaml  config_illumina.yaml  corpus_orchestrator_demo.py  dataset_writer_demo.py  generate_1mb_test_data.py  generate_example_data.py  ground_truth_labeling_demo.py  ml_interfaces_demo.py  sample_config.yaml  simple_training_data_generator.py  training_data_demo.py
models/: error_predictor_v2.pt  test_diploid_ai.json  test_diploid_ai.pkl
nextflow/: README.md  main.nf  nextflow.config
notebooks/: Colab_Training_StrandWeaver.ipynb  PathGNN_Training_Colab.ipynb
scripts/: compare_edgeai_strategies.py  compare_errorsmith_models.py  generate_10x_training.sh  generate_assembly_training_data.py  generate_enhanced_correction_training_data.py  generate_errorsmith_training_data.py  generate_kweaver_training_data.py  package_training_data.sh  retrain_all_models.sh  slurm_generate_10x.sh  sync_to_release.sh  validate_type_hints.py  verify_gpu_setup.py
strandweaver/: Completed_Scripts_Log.md  __init__.py  cli.py  version.py
tests/: README.md  __init__.py  conftest.py  test_bubble_phasing.py  test_cli.py  test_edgewarden.py  test_graph_training_data.py  test_integration.py  test_kweaver.py  test_polisher_gap_filler.py  test_qv_estimator.py  test_read_classification.py  test_sequence_utils.py  test_train_models.py  test_training_config.py  test_ul_router.py
trained_models/: SRA_List.txt  TRAINING.md  training_report.json
(+164 files in other folders)
