[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strandweaver"
version = "0.1.0"
description = "AI-Powered Multi-Technology Genome Assembler with GPU Acceleration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Dual License (Academic/Commercial)"}
authors = [
    {name = "Patrick Grady", email = "dr.pgrady@gmail.com"}
]
keywords = ["genome", "assembly", "bioinformatics", "long-reads", "hifi", "ont", "pacbio", "gpu", "ai", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=0.24.0",
    "pandas>=1.3.0",
    "click>=8.0.0",
    "pyyaml>=5.4",
    "biopython>=1.79",
    "pysam>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "sphinx>=4.5",
]

ai = [
    "torch>=2.0.0",
    "pytorch-geometric>=2.3.0",
    "xgboost>=2.0.0",
]

hic = [
    "scipy>=1.9.0",
    "scikit-learn>=1.3.0",
]

all = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "sphinx>=4.5",
    "torch>=2.0.0",
    "pytorch-geometric>=2.3.0",
    "xgboost>=2.0.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/pgrady1322/strandweaver"
Documentation = "https://github.com/pgrady1322/strandweaver/tree/main/docs"
Repository = "https://github.com/pgrady1322/strandweaver"
"Bug Tracker" = "https://github.com/pgrady1322/strandweaver/issues"

[project.scripts]
strandweaver = "strandweaver.cli:main"

[tool.setuptools]
packages = ["strandweaver"]

[tool.setuptools.package-data]
strandweaver = [
    "config/*.yaml",
    "config/*.yml",
]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=strandweaver --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
